--- a/style.scss
+++ b/style.scss
@@ -7,9 +7,16 @@ html, body {
   line-height: 1.5;
   color: #363636;
   letter-spacing: 0.25px;
+  height: 100%;
 }
 
-.site-header {
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#site-header {
   background-color: #181819;
     color: #FFF;
     height: 75px;
@@ -17,15 +24,28 @@ html, body {
     padding: 0 30px;
 }
 
+#site-header a {
+  color: #FFF;
+  margin-left: 15px;
+  font-size: 16px;
+  text-transform: uppercase;
+  outline: none !important;
+  text-decoration: none !important;
+}
+
+#site-header a:hover {
+  color: #1f9c9c;
+}
+
 .site-logo {
   background-image: url(https://bennyluk.github.io/images/logo.png);
-width: 35px;
-height: 35px;
-background-size: contain;
-background-repeat: no-repeat;
-display: inline-block;
-float: left;
-margin: 18px 13px 0 0;
+  width: 35px;
+  height: 35px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: inline-block;
+  float: left;
+  margin-top: 18px;
 }
 
 .site-title {
@@ -37,15 +57,119 @@ margin: 18px 13px 0 0;
   float: right;
 }
 
-.site-menu a {
-  color: #FFF;
-  margin-left: 15px;
-  font-size: 16px;
-  text-transform: uppercase;
-  outline: none !important;
-  text-decoration: none !important;
+#content {
+  padding: 30px 0;
+  min-height: calc(100% - 105px);
 }
 
-.site-menu a:hover {
+
+/* POSTS */
+.site-article-list-item {
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.article-date {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.article-entry {
+  padding: 0 5px 25px;
+}
+
+.article-tags {
+  text-align: right;
+}
+
+
+
+
+
+.post-header,
+.filter-posts-header {
+  border-bottom: 1px solid #CCC;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.post-tag {
+  border: 1px solid #1f9c9c;
+  padding: 2px 10px;
+  margin-right: 5px;
   color: #1f9c9c;
+  outline: none !important;
+  text-decoration: none !important;
+  text-transform: lowercase;
+}
+
+.post-tag:hover {
+  color: #FFF;
+  background-color: #1f9c9c;
+}
+
+.post-entry {
+  margin: 50px 0;
+}
+
+.article-header,
+.post-entry h3 {
+  border-bottom: 1px solid #EEE;
+  padding-bottom: 5px;
+  margin-top: 50px;
+}
+
+.filter-posts-loading {
+  text-align: center;
+  margin-top: 75px;
+}
+
+.filter-posts-loading::after {
+  content: "Loading...";
+  margin-left: 10px;
+}
+
+.filter-posts-loading.filter-posts-empty .fa-spinner {
+  display: none;
+}
+
+.filter-posts-loading.filter-posts-empty::after {
+  content: "No Posts Found";
+}
+
+.post-tags {
+  margin: 10px 0;
+}
+
+.post-tags .post-tag {
+  display: inline-block;
+  margin: 5px;
+}
+
+#site-footer {
+  position: relative;
+  background-color: #181819;
+  color: #FFF;
+  text-align: center;
+  font-size: 12px;
+  height: 30px;
+  line-height: 30px;
+  overflow: hidden;
+}
+
+#footer-social-icons {
+  text-align: center;
+  position: absolute;
+  top: 4px;
+  right: 15px;
+  font-size: 8px;
+}
+
+#footer-social-icons li {
+  display: inline-block;
+}
+
+#footer-social-icons a {
+  color: #FFF;
 }
